# blackbook

./: README.md  pyproject.toml
blackbook/: __init__.py  main.py
